--- a/cloud.demo.commodity/pom.xml
+++ b/cloud.demo.commodity/pom.xml
@@ -9,14 +9,23 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	
-	<artifactId>cloud.demo.eureka</artifactId>
-	<name>cloud.demo.eureka</name>
-	<description>Demo Eureka</description>
-
+	<artifactId>cloud.demo.commodity</artifactId>
+	<name>cloud.demo.commodity</name>
+	<description>Demo Commodity</description>
+	
 	<dependencies>
 		<dependency>
+			<groupId>com.zhuduan</groupId>
+			<artifactId>cloud.demo.pojo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 	</dependencies>
 </project>
