--- a/cloud.demo.points/pom.xml
+++ b/cloud.demo.points/pom.xml
@@ -2,21 +2,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>com.zhuduan</groupId>
 		<artifactId>cloud.demo</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	
-	<artifactId>cloud.demo.eureka</artifactId>
-	<name>cloud.demo.eureka</name>
-	<description>Demo Eureka</description>
+	<artifactId>cloud.demo.points</artifactId>
+	<name>cloud.demo.points</name>
+	<description>Demo Points</description>
 
 	<dependencies>
 		<dependency>
+			<groupId>com.zhuduan</groupId>
+			<artifactId>cloud.demo.pojo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 	</dependencies>
 </project>
