--- a/cloud.demo.eureka/src/main/resources/application.yml
+++ b/cloud.demo.eureka/src/main/resources/application.yml
@@ -10,8 +10,8 @@ eureka:
   instance:
     hostname: localhost
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost:10002/eureka/,http://localhost:10003/eureka/
 ---
