--- a/cloud.demo.eureka/src/main/resources/application.yml
+++ b/cloud.demo.eureka/src/main/resources/application.yml
@@ -10,6 +10,8 @@ eureka:
   instance:
     hostname: localhost
   client:
+    healthcheck:
+      enabled: true
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
@@ -26,6 +28,8 @@ eureka:
   instance:
     hostname: localhost
   client:
+    healthcheck:
+      enabled: true
     serviceUrl:
       defaultZone: http://localhost:10001/eureka/,http://localhost:10003/eureka/
 ---
@@ -40,5 +44,7 @@ eureka:
   instance:
     hostname: localhost
   client:
+    healthcheck:
+      enabled: true
     serviceUrl:
       defaultZone: http://localhost:10001/eureka/,http://localhost:10002/eureka/
