--- a/cloud.demo.order/pom.xml
+++ b/cloud.demo.order/pom.xml
@@ -14,11 +14,11 @@
 	<description>Demo Order</description>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.zhuduan</groupId>
-			<artifactId>cloud.demo.pojo</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.zhuduan</groupId>-->
+			<!--<artifactId>cloud.demo.pojo</artifactId>-->
+			<!--<version>0.0.1-SNAPSHOT</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -26,6 +26,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
 
